# gym-distractions

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml  setup.py  test_dmc2gym.py
.github/workflows/: build.yaml  test.yaml
distractor_dmc2gym/: __init__.py  background_source.py  enums.py  wrappers.py
distractor_dmc2gym/distractors/: __init__.py  background_source.py  dots_source.py  noise.py  random_color.py  video_data_source.py
distractor_dmc2gym/distractors/dots/: __init__.py  constant_dots.py  dots_source.py  episode_dots.py  linear_dots.py  pendulum_dots.py  quadlink_dots.py  random_dots.py
distractor_dmc2gym/merge_strategy/: __init__.py
docs/: conf.py  index.rst
docs/api/: gym_distractions.distractors.dots.rst  gym_distractions.distractors.rst  gym_distractions.merge_strategy.rst  gym_distractions.rst  modules.rst
gym_distractions/: __init__.py  errors.py  type_mappings.py  wrapper.py  wrappers.py
gym_distractions/distractors/: __init__.py  background_source.py  noise.py  random_color.py  video_data_source.py
gym_distractions/distractors/dots/: __init__.py  constant_dots.py  pendulum_dots.py
gym_distractions/merge_strategy/: __init__.py
local_dmc2gym/: background_source.py  wrappers.py
tests/: test_gym.py  test_make.py  test_wrappers.py
tests/distractors/: test_background_sources.py
tests/merge_strategy/: test_merge_timeseries.py
